Add photo search
Fixes #4

--- a/.env-dist
+++ b/.env-dist
@@ -1,6 +1,17 @@
 export HUBOT_LOG_LEVEL=debug
+
+# Slack Adapter
 export HUBOT_SLACK_TOKEN=the_slack_token
+
+# Google Custom Search Engine (for image searches)
 export HUBOT_GOOGLE_CSE_ID=the_google_custom_search_engine_id
 export HUBOT_GOOGLE_CSE_KEY=the_google_custom_search_engine_api_key
+
+# Dark Sky
 export HUBOT_DARK_SKY_API_KEY=the_dark_sky_api_key
 export HUBOT_DARK_SKY_DEFAULT_LOCATION=37203
+
+# Flickr Search
+export HUBOT_FLICKR_GROUP_ID=the_flickr_group_id
+export HUBOT_FLICKR_API_KEY=the_flickr_api_key
+export HUBOT_FLICKR_API_SECRET=the_flickr_api_secret
