--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "hubot-heroku-keepalive": "^1.0.2",
     "hubot-maps": "0.0.2",
     "hubot-nashville-news": "^1.0.2",
+    "hubot-nashville-pollen": "^1.0.0",
     "hubot-plusplus": "^1.4.0",
     "hubot-pugme": "^0.1.0",
     "hubot-redis-brain": "0.0.3",
