--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "hubot-google-images": "^0.2.6",
     "hubot-google-translate": "^0.2.0",
     "hubot-help": "^0.2.0",
+    "hubot-hockey": "^1.3.1",
     "hubot-homepage": "^1.0.0",
     "hubot-maps": "0.0.2",
     "hubot-nashville-news": "^1.0.3",
