--- a/package.json
+++ b/package.json
@@ -7,21 +7,22 @@
   "dependencies": {
     "hubot": "^2.19.0",
     "hubot-darksky": "^1.1.0",
-    "hubot-diagnostics": "0.0.1",
+    "hubot-diagnostics": "0.0.2",
     "hubot-flickr-group-search": "^1.0.0",
-    "hubot-google-images": "^0.2.6",
-    "hubot-google-translate": "^0.2.0",
-    "hubot-help": "^0.2.0",
+    "hubot-google-images": "^0.2.7",
+    "hubot-google-translate": "^0.2.1",
+    "hubot-help": "^0.2.2",
     "hubot-hockey": "^1.3.1",
     "hubot-homepage": "^1.0.0",
-    "hubot-maps": "0.0.2",
+    "hubot-lyft": "^1.0.1",
+    "hubot-maps": "0.0.3",
     "hubot-nashville-news": "^1.0.3",
     "hubot-nashville-pollen": "^1.1.0",
     "hubot-plusplus": "^1.4.0",
-    "hubot-pugme": "^0.1.0",
-    "hubot-redis-brain": "0.0.3",
-    "hubot-rules": "^0.1.1",
-    "hubot-shipit": "^0.2.0",
+    "hubot-pugme": "^0.1.1",
+    "hubot-redis-brain": "0.0.4",
+    "hubot-rules": "^0.1.2",
+    "hubot-shipit": "^0.2.1",
     "hubot-slack": "^4.3.4"
   },
   "engines": {
