--- a/.env-dist
+++ b/.env-dist
@@ -15,3 +15,11 @@ export HUBOT_DARK_SKY_DEFAULT_LOCATION=37203
 export HUBOT_FLICKR_GROUP_ID=the_flickr_group_id
 export HUBOT_FLICKR_API_KEY=the_flickr_api_key
 export HUBOT_FLICKR_API_SECRET=the_flickr_api_secret
+
+# Lyft
+export HUBOT_LYFT_OUTPUT_FORMAT=slack
+export HUBOT_LYFT_CLIENT_ID=value
+export HUBOT_LYFT_CLIENT_TOKEN=value
+export HUBOT_LYFT_CLIENT_SECRET=value
+export HUBOT_LYFT_DEFAULT_LATITUDE=value
+export HUBOT_LYFT_DEFAULT_LONGITUDE=value
