--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "hubot-redis-brain": "0.0.4",
     "hubot-rules": "^0.1.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.3.4"
+    "hubot-slack": "^4.3.4",
+    "request": "^2.81.0"
   },
   "engines": {
     "node": "6.10.x"
