--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "hubot-google-images": "^0.2.7",
     "hubot-google-translate": "^0.2.1",
     "hubot-help": "^0.2.2",
-    "hubot-hockey": "^1.3.1",
+    "hubot-hockey": "^1.3.2",
     "hubot-homepage": "^1.0.0",
     "hubot-lyft": "^1.0.1",
     "hubot-maps": "0.0.3",
@@ -23,8 +23,7 @@
     "hubot-redis-brain": "0.0.4",
     "hubot-rules": "^0.1.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.3.4",
-    "request": "^2.81.0"
+    "hubot-slack": "^4.4.0"
   },
   "engines": {
     "node": "6.10.x"
