Dockerized container for Hubot
Runs Hubot within a Docker container.

--- a/.env-dist
+++ b/.env-dist
@@ -1,25 +1,23 @@
-export HUBOT_LOG_LEVEL=debug
+HUBOT_LOG_LEVEL=debug
 
 # Slack Adapter
-export HUBOT_SLACK_TOKEN=the_slack_token
+HUBOT_SLACK_TOKEN=the_slack_token
 
 # Google Custom Search Engine (for image searches)
-export HUBOT_GOOGLE_CSE_ID=the_google_custom_search_engine_id
-export HUBOT_GOOGLE_CSE_KEY=the_google_custom_search_engine_api_key
+HUBOT_GOOGLE_CSE_ID=the_google_custom_search_engine_id
+HUBOT_GOOGLE_CSE_KEY=the_google_custom_search_engine_api_key
 
 # Dark Sky
-export HUBOT_DARK_SKY_API_KEY=the_dark_sky_api_key
-export HUBOT_DARK_SKY_DEFAULT_LOCATION=37203
+HUBOT_DARK_SKY_API_KEY=the_dark_sky_api_key
+HUBOT_DARK_SKY_DEFAULT_LOCATION=37203
 
 # Flickr Search
-export HUBOT_FLICKR_GROUP_ID=the_flickr_group_id
-export HUBOT_FLICKR_API_KEY=the_flickr_api_key
-export HUBOT_FLICKR_API_SECRET=the_flickr_api_secret
+HUBOT_FLICKR_GROUP_ID=the_flickr_group_id
+HUBOT_FLICKR_API_KEY=the_flickr_api_key
+HUBOT_FLICKR_API_SECRET=the_flickr_api_secret
 
 # Lyft
-export HUBOT_LYFT_OUTPUT_FORMAT=slack
-export HUBOT_LYFT_CLIENT_ID=value
-export HUBOT_LYFT_CLIENT_TOKEN=value
-export HUBOT_LYFT_CLIENT_SECRET=value
-export HUBOT_LYFT_DEFAULT_LATITUDE=value
-export HUBOT_LYFT_DEFAULT_LONGITUDE=value
+HUBOT_LYFT_OUTPUT_FORMAT=slack
+HUBOT_LYFT_CLIENT_TOKEN=some_data
+HUBOT_LYFT_DEFAULT_LATITUDE=some_data
+HUBOT_LYFT_DEFAULT_LONGITUDE_some_data
