--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "hubot-lyft": "^1.0.2",
     "hubot-maps": "0.0.3",
     "hubot-nashville-news": "^1.0.4",
-    "hubot-nashville-pollen": "^1.1.2",
     "hubot-plusplus": "^1.4.0",
+    "hubot-pollen": "^1.1.1",
     "hubot-pugme": "^0.1.1",
     "hubot-redis-brain": "0.0.4",
     "hubot-rules": "^0.1.2",
