Add ENBW Tap List
Adds `!enbw` command to get a list of what's on tap at East Nashville Beer Works.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "hubot-darksky": "^1.1.0",
     "hubot-diagnostics": "0.0.2",
     "hubot-dotenv": "^1.0.0",
+    "hubot-enbw": "^1.0.0",
     "hubot-flickr-group-search": "^1.1.1",
     "hubot-google-images": "^0.2.7",
     "hubot-google-translate": "^0.2.1",
