--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "hubot": "^3.3.2",
     "hubot-bcycle-finder": "^2.1.7",
+    "hubot-dad-jokes": "^1.0.0",
     "hubot-diagnostics": "1.0.0",
     "hubot-dotenv": "^1.0.0",
     "hubot-enbw": "^1.0.8",
