--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "hubot-hockey": "^4.1.7",
     "hubot-homepage": "^1.0.8",
     "hubot-maps": "0.0.3",
+    "hubot-nashville-electric": "^1.0.0",
     "hubot-nashville-news": "^1.0.12",
     "hubot-plusplus": "^1.4.0",
     "hubot-pollen": "^1.1.11",
