--- a/.env-dist
+++ b/.env-dist
@@ -1,4 +1,4 @@
-HUBOT_LOG_LEVEL=debug
+HUBOT_LOG_LEVEL=error
 
 # Slack Adapter
 HUBOT_SLACK_TOKEN=the_slack_token
@@ -7,17 +7,8 @@ HUBOT_SLACK_TOKEN=the_slack_token
 HUBOT_GOOGLE_CSE_ID=the_google_custom_search_engine_id
 HUBOT_GOOGLE_CSE_KEY=the_google_custom_search_engine_api_key
 
-# Dark Sky
-HUBOT_DARK_SKY_API_KEY=the_dark_sky_api_key
-HUBOT_DARK_SKY_DEFAULT_LOCATION=37203
-
 # Flickr Search
 HUBOT_FLICKR_GROUP_ID=the_flickr_group_id
 HUBOT_FLICKR_API_KEY=the_flickr_api_key
 HUBOT_FLICKR_API_SECRET=the_flickr_api_secret
 
-# Lyft
-HUBOT_LYFT_OUTPUT_FORMAT=slack
-HUBOT_LYFT_CLIENT_TOKEN=some_data
-HUBOT_LYFT_DEFAULT_LATITUDE=some_data
-HUBOT_LYFT_DEFAULT_LONGITUDE_some_data
