--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "hubot-dad-jokes": "^1.0.3",
     "hubot-diagnostics": "1.0.0",
     "hubot-dotenv": "^1.0.0",
-    "hubot-enbw": "^1.0.8",
     "hubot-flickr-group-search": "^1.1.12",
     "hubot-google-images": "^0.2.7",
     "hubot-google-translate": "^0.2.1",
@@ -29,8 +28,8 @@
     "hubot-slack": "^4.9.0"
   },
   "scripts": {
-    "start": "bin/hubot --adapter slack --alias '!'",
-    "localtest": "hubot-dotenv --alias \"!\"",
+    "start": "bin/hubot --adapter --name batpoet slack --alias '!'",
+    "local": "hubot-dotenv --name batpoet --alias \"!\"",
     "test": "hubot-dotenv --config-check"
   }
 }
