Add Discord connection

--- a/.env-dist
+++ b/.env-dist
@@ -1,7 +1,15 @@
 HUBOT_LOG_LEVEL=error
 
+# Defaults
+HUBOT_DEFAULT_LATITUDE=36.162222
+HUBOT_DEFAULT_LONGITUDE=-86.774444
+
 # Slack Adapter
 HUBOT_SLACK_TOKEN=the_slack_token
+
+# Discord Adapter
+HUBOT_DISCORD_TOKEN=the_discord_token
+HUBOT_DISCORD_STATUS_MSG="/help for help"
 
 # Google Custom Search Engine (for image searches)
 HUBOT_GOOGLE_CSE_ID=the_google_custom_search_engine_id
@@ -12,3 +20,5 @@ HUBOT_FLICKR_GROUP_ID=the_flickr_group_id
 HUBOT_FLICKR_API_KEY=the_flickr_api_key
 HUBOT_FLICKR_API_SECRET=the_flickr_api_secret
 
+# OpenWeatherMap
+HUBOT_OPEN_WEATHER_MAP_API_KEY=the_owm_api_key
