Use hubot-openweathermap package

--- a/.env-dist
+++ b/.env-dist
@@ -22,3 +22,11 @@ HUBOT_FLICKR_API_SECRET=the_flickr_api_secret
 
 # OpenWeatherMap
 HUBOT_OPEN_WEATHER_MAP_API_KEY=the_owm_api_key
+
+# BCycle
+BCYCLE_CITY=nashville
+BCYCLE_DEFAULT_STATIONS=2180,2177,3613,2168,2179
+
+# AirNow.gov
+HUBOT_AIRNOW_API_KEY=the_airnow_api_key
+HUBOT_AIRNOW_DEFAULT_ZIP=37203
