--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Nashvillest <tips@nashvillest.com>",
   "description": "Honoring the legacy of Nashville public access star Joey Bowker.",
   "dependencies": {
-    "@stephenyeargin/hubot-openweathermap": "^1.2.3",
+    "@stephenyeargin/hubot-openweathermap": "npm:^1.2.3",
     "coffeescript": "jashkenas/coffeescript#7b9fbf2c7694c38b71f921ac370f33cdcf835242",
     "hubot": "^4",
     "hubot-airnow-gov": "^1.2.2",
