--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,8 @@
-version: '3.3'
-
 services:
   redis:
     container_name: nashvillest-redis
     image: redis:alpine
+    restart: always
   hubot:
     container_name: nashvillest-hubot
     build: .
@@ -13,3 +12,4 @@ services:
       - REDIS_URL=redis://nashvillest-redis:16379
     depends_on:
       - redis
+    restart: always
