--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Honoring the legacy of Nashville public access star Joey Bowker.",
   "dependencies": {
     "@slack/web-api": "^7.13.0",
-    "@stephenyeargin/hubot-openweathermap": "^github:stephenyeargin/hubot-openweathermap#main",
+    "@stephenyeargin/hubot-openweathermap": "stephenyeargin/hubot-openweathermap#main",
     "hubot": "^4",
     "hubot-airnow-gov": "^1.2.3",
     "hubot-bcycle-finder": "^2.3.4",
@@ -23,7 +23,7 @@
     "hubot-nashville-news": "^1.1.5",
     "hubot-plusplus": "^1.4.0",
     "hubot-pollen": "^1.3.3",
-    "hubot-redis-brain": "hubotio/hubot-redis-brain#main",
+    "hubot-redis-brain": "hubotio/hubot-redis-brain#b7a7ac48b18c6043439e2caa461e1602de31ff2c",
     "hubot-shipit": "^0.2.1",
     "hubot-slack": "^4.10.0"
   },
