--- a/.env-dist
+++ b/.env-dist
@@ -5,7 +5,10 @@ HUBOT_DEFAULT_LATITUDE=36.162222
 HUBOT_DEFAULT_LONGITUDE=-86.774444
 
 # Slack Adapter
+HUBOT_SLACK_APP_TOKEN=the_slack_app_token
+HUBOT_SLACK_BOT_TOKEN=the_slack_bot_token
 HUBOT_SLACK_TOKEN=the_slack_token
+
 
 # Discord Adapter
 HUBOT_DISCORD_TOKEN=the_discord_token
