--- a/package.json
+++ b/package.json
@@ -5,37 +5,33 @@
   "author": "Nashvillest <tips@nashvillest.com>",
   "description": "Honoring the legacy of Nashville public access star Joey Bowker.",
   "dependencies": {
+    "@hubot-friends/hubot-discord": "^4.1.0",
+    "@hubot-friends/hubot-slack": "^3.7.2",
     "@slack/web-api": "^7.13.0",
     "@stephenyeargin/hubot-openweathermap": "stephenyeargin/hubot-openweathermap#main",
-    "coffeescript": "^2.7.0",
-    "hubot": "^4",
+    "hubot": "^13",
     "hubot-airnow-gov": "^1.2.3",
     "hubot-bcycle-finder": "^2.3.4",
     "hubot-dad-jokes": "^1.1.4",
-    "hubot-diagnostics": "hubotio/hubot-diagnostics#3b6d7ba732ee8aa0e7ba2e8345a02510278ce280",
-    "hubot-discord": "^2.1.0",
+    "hubot-diagnostics": "^2.1.3",
     "hubot-dotenv": "^1.0.0",
     "hubot-flickr-group-search": "^1.1.23",
-    "hubot-google-images": "^0.2.7",
-    "hubot-help": "hubotio/hubot-help#92f12df9d9f1373a332578f60c4e1830f72269cc",
+    "hubot-help": "^2.1.5",
     "hubot-hockey": "^6.6.2",
     "hubot-homepage": "^1.1.5",
     "hubot-nashville-electric": "^1.2.4",
     "hubot-nashville-news": "^1.1.5",
-    "hubot-plusplus": "^1.4.0",
     "hubot-pollen": "^1.3.3",
-    "hubot-redis-brain": "hubotio/hubot-redis-brain#b7a7ac48b18c6043439e2caa461e1602de31ff2c",
-    "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.10.0"
+    "hubot-redis-brain": "hubotio/hubot-redis-brain#b7a7ac48b18c6043439e2caa461e1602de31ff2c"
   },
   "scripts": {
     "start": "npm run start:slack",
-    "start:slack": "PORT=0 bin/hubot --adapter slack --name batpoet --alias '!'",
-    "start:discord": "PORT=0 bin/hubot --adapter discord --name batpoet --alias '!'",
+    "start:slack": "PORT=0 bin/hubot --adapter @hubot-friends/hubot-slack --name batpoet --alias '!'",
+    "start:discord": "PORT=0 bin/hubot --adapter @hubot-friends/hubot-discord --name batpoet --alias '!'",
     "local": "hubot-dotenv --name batpoet --alias \"!\"",
-    "test": "hubot-dotenv --config-check"
+    "test": "node -e \"require('dotenv').config(); if(!process.env.HUBOT_SLACK_BOT_TOKEN) { console.error('Missing HUBOT_SLACK_BOT_TOKEN in .env'); process.exit(1); } console.log('Environment configuration OK');\""
   },
   "volta": {
-    "node": "24.12.0"
+    "node": "20.17.0"
   }
 }
